
# include_directories(
#     "."
# )

# # add_subdirectory("./component")

# add_library(
#     game
#     "game.cpp"
#     "engine.cpp"
#     "map.cpp"
#     "gui.cpp"
#     "camera.cpp"
# )

# set(COMP_SCRS
#     "attacker.cpp"
# )
# # target_link_libraries(game entity pthread fmt LIBTCOD)

# # set(CMAKE_BUILD_TYPE RELEASE)
# # set(CMAKE_BUILD_TYPE DEBUG)

